# src/docs/swagger.yaml
@@ -174,6 +174,13 @@ definitions:
           $ref: '#/definitions/module.AddSubModuleResp'
         type: array
     type: object
+  module.GetModulesResp:
+    properties:
+      modules:
+        items:
+          $ref: '#/definitions/module.GetModuleResp'
+        type: array
+    type: object
   module.GetSubModuleResp:
     properties:
       id:
@@ -341,6 +348,41 @@ paths:
       tags:
       - auth
   /v1/module:
+    get:
+      description: get modules
+      parameters:
+      - description: name filter
+        in: query
+        name: namemMatch
+        type: string
+      - description: name filter
+        in: query
+        name: offset
+        type: integer
+      - description: name filter
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/module.GetModulesResp'
+        "401":
+          description: not auth
+          schema:
+            $ref: '#/definitions/err.Error'
+        "500":
+          description: internal
+          schema:
+            $ref: '#/definitions/err.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: get modules
+      tags:
+      - module
     post:
       consumes:
       - application/json
